# Endpoint-Crawler

./: LICENSE  Makefile  README.md  pyproject.toml  settings.example.toml
endpoint_crawler/: __init__.py  __main__.py  config.py  util.py
endpoint_crawler/frameworks/: base.py  spring_boot.py
tests/: test_main.py  test_spring_boot.py
tests/resources/: controller.java
